--- a/halo/template/camera-hub.pug
+++ b/halo/template/camera-hub.pug
@@ -30,18 +30,18 @@ block content
         .carousel-item.banner-carousel.banner-carousel--dslr.active
           img.banner-carousel__img(src='img/camera-hub-img/portal-dslr-min.png' alt='')
           .carousel-caption.banner-carousel__caption.font-weight-bold
-            p.banner__text CHUYÊN NGHIỆP
-            p.banner__text CHUẨN CHỈ
-            p.banner__text CỘNG ĐỒNG LỚN
-            a.btn.btn--dark.banner__btn.banner-carousel__btn(href="#") Xem tất cả DSLR
+            p.banner-carousel__text.banner-carousel__text--dslr CHUYÊN NGHIỆP
+            p.banner-carousel__text.banner-carousel__text--dslr CHUẨN CHỈ
+            p.banner-carousel__text.banner-carousel__text--dslr CỘNG ĐỒNG LỚN
+            a.btn.btn--dark.banner-carousel__btn(href="#") Xem tất cả DSLR
 
         .carousel-item.banner-carousel.banner-carousel--mrl
           img.banner-carousel__img(src='img/camera-hub-img/portal-mrl-min.png' alt='')
           .carousel-caption.banner-carousel__caption.font-weight-bold
-            p.banner__text TIỆN LỢI
-            p.banner__text THỜI THƯỢNG
-            p.banner__text TRẺ TRUNG
-            a.btn.btn--light.banner__btn.banner-carousel__btn(href="#") Xem tất cả Mirrorless
+            p.banner-carousel__text.banner-carousel__text--mrl TIỆN LỢI
+            p.banner-carousel__text.banner-carousel__text--mrl THỜI THƯỢNG
+            p.banner-carousel__text.banner-carousel__text--mrl TRẺ TRUNG
+            a.btn.btn--light.banner-carousel__btn(href="#") Xem tất cả Mirrorless
 
       a.carousel-control-prev(href='#camera-carousel' data-slide='prev')
         img(src='img/misc-img/prev-arrow-xs-v2.png')
@@ -60,19 +60,19 @@ block content
         img.banner-full__img(src="img/camera-hub-img/portal-dslr-v1.png", alt="")
         .banner-full__text-area.align-self-center
           .banner-full__text-only.font-weight-bold
-            p.banner__text CHUYÊN NGHIỆP
-            p.banner__text CHUẨN CHỈ
-            p.banner__text CỘNG ĐỒNG LỚN
-          a.btn.btn--dark.banner__btn.banner-full__btn(href="#") Xem tất cả DSLR
+            p.banner-full__text.banner-full__text--dslr CHUYÊN NGHIỆP
+            p.banner-full__text.banner-full__text--dslr CHUẨN CHỈ
+            p.banner-full__text.banner-full__text--dslr CỘNG ĐỒNG LỚN
+          a.btn.btn--dark.banner-full__btn.banner-full__btn--dslr(href="#") Xem tất cả DSLR
 
       .banner-full.banner-full--mrl.d-flex.w-50
         .banner-full__text-area.align-self-center
           .banner-full__text-only.font-weight-bold
-            p.banner__text.text-light TIỆN LỢI
-            p.banner__text.text-light THỜI THƯỢNG
-            p.banner__text.text-light TRẺ TRUNG
-          a.btn.btn--light.banner__btn.banner-full__btn(href="#") Xem tất cả Mirrorless
-        img.banner-full__img(src="img/camera-hub-img/portal-mrl-max-v5.png", alt="")
+            p.banner-full__text.banner-full__text--mrl.text-light THỜI THƯỢNG
+            p.banner-full__text.banner-full__text--mrl.text-light TIỆN LỢI
+            p.banner-full__text.banner-full__text--mrl.text-light TRẺ TRUNG
+          a.btn.btn--light.banner-full__btn.banner-full__btn--mrl(href="#") Xem tất cả Mirrorless
+        img.banner-full__img(src="img/camera-hub-img/portal-mrl-max-v6.png", alt="")
       
     a.btn.btn--dark.portal-btn(href="#") Xem tất cả máy ảnh
 
