--- a/halo/template/camera-hub.pug
+++ b/halo/template/camera-hub.pug
@@ -38,9 +38,9 @@ block content
         .carousel-item.banner-carousel.banner-carousel--mrl
           img.banner-carousel__img(src='img/camera-hub-img/portal-mrl-min.png' alt='')
           .carousel-caption.banner-carousel__caption.font-weight-bold
+            p.banner-carousel__text.banner-carousel__text--mrl TRẺ TRUNG
             p.banner-carousel__text.banner-carousel__text--mrl TIỆN LỢI
             p.banner-carousel__text.banner-carousel__text--mrl THỜI THƯỢNG
-            p.banner-carousel__text.banner-carousel__text--mrl TRẺ TRUNG
             a.btn.btn--light.banner-carousel__btn(href="#") Xem tất cả Mirrorless
 
       a.carousel-control-prev(href='#camera-carousel' data-slide='prev')
@@ -67,44 +67,44 @@ block content
 
       .banner-full.banner-full--mrl.d-flex.w-50
         .banner-full__text-area.align-self-center
-          .banner-full__text-only.font-weight-bold
-            p.banner-full__text.banner-full__text--mrl.text-light THỜI THƯỢNG
-            p.banner-full__text.banner-full__text--mrl.text-light TIỆN LỢI
+          .banner-full__text-only.font-weight-bold 
             p.banner-full__text.banner-full__text--mrl.text-light TRẺ TRUNG
+            p.banner-full__text.banner-full__text--mrl.text-light TIỆN LỢI
+            p.banner-full__text.banner-full__text--mrl.text-light THỜI THƯỢNG
           a.btn.btn--light.banner-full__btn.banner-full__btn--mrl(href="#") Xem tất cả Mirrorless
         img.banner-full__img(src="img/camera-hub-img/portal-mrl-max-v6.png", alt="")
       
-    a.btn.btn--dark.portal-btn(href="#") Xem tất cả máy ảnh
+    a.btn.btn--dark.portal__btn(href="#") Xem tất cả máy ảnh
 
-  section.item-row.sale-row
+  section.hub-row.hub-row--sale
     h1.section__header HOT SALE
-    .container-xl.slider-row.sale-row.slider
+    .container-xl.slider-row.slider
       include parts/card.pug
       include parts/card.pug
       include parts/card.pug
       include parts/card.pug
       include parts/card.pug
-    a.btn.btn--dark.item-row__btn(href="#") Xem toàn bộ 
+    a.btn.btn--dark.hub-row__btn(href="#") Xem toàn bộ 
 
-  section.item-row.hot-row
+  section.hub-row.hub-row--hot
     h1.section__header BÁN CHẠY
-    .container-xl.slider-row.hot-row.slider
+    .container-xl.slider-row.slider
       include parts/card.pug
       include parts/card.pug
       include parts/card.pug
       include parts/card.pug
       include parts/card.pug
-    a.btn.btn--dark.item-row__btn(href="#") Xem toàn bộ 
+    a.btn.btn--dark.hub-row__btn(href="#") Xem toàn bộ 
 
-  section.item-row.love-row
+  section.hub-row.hub-row--love
     h1.section__header ĐÁNH GIÁ TỐT
-    .container-xl.slider-row.love-row.slider
+    .container-xl.slider-row.slider
       include parts/card.pug
       include parts/card.pug
       include parts/card.pug
       include parts/card.pug
       include parts/card.pug
-    a.btn.btn--dark.item-row__btn(href="#") Xem toàn bộ 
+    a.btn.btn--dark.hub-row__btn(href="#") Xem toàn bộ 
 
 
 
