--- a/halo/template/parts/card.pug
+++ b/halo/template/parts/card.pug
@@ -1,4 +1,4 @@
-.card
+.card.item--min
   img.card-img-top(src='img/body-img/canon-eos-5d-mark-iv-card.jpg' alt='')
   .card-body.text-center
     p.card-title.font-weight-bold.font-18
