--- a/halo/template/parts/footer.pug
+++ b/halo/template/parts/footer.pug
@@ -4,16 +4,16 @@ footer.dark-side
 
     ul.footer__menu.d-flex.justify-content-between.align-items-center
       li.footer__item.d-flex.justify-content-center.align-items-center
-        a.footer__link.text-center(href="#") Giới thiệu
+        a.footer__link.text-center.font-weight-bold(href="#") Giới thiệu
 
       li.footer__item.d-flex.justify-content-center.align-items-center
-        a.footer__link.text-center(href="#") Hỗ trợ
+        a.footer__link.text-center.font-weight-bold(href="#") Hỗ trợ
 
       li.footer__item.d-flex.justify-content-center.align-items-center
-        a.footer__link.text-center(href="#") Chính sách
+        a.footer__link.text-center.font-weight-bold(href="#") Chính sách
 
       li.footer__item.d-flex.justify-content-center.align-items-center
-        a.footer__link.text-center(href="#") Liên hệ
+        a.footer__link.text-center.font-weight-bold(href="#") Liên hệ
     
     p.footer__info
       | Địa chỉ: Số Math.pow(n+1, 2), phố “ABC”, Hà Nội 
