--- a/halo/template/parts/main-carousel.pug
+++ b/halo/template/parts/main-carousel.pug
@@ -24,8 +24,8 @@
               .progress-bar(role='progressbar' aria-valuemin='0' aria-valuemax='100' style='width: 100%; height: 5px')
 
 
-          p.carousel-header ĐỊNH NGHĨA LẠI 
-          p.carousel-header CHUẨN MỰC HÌNH ẢNH HIỆN ĐẠI
+          p.main-carousel__text ĐỊNH NGHĨA LẠI 
+          p.main-carousel__text CHUẨN MỰC HÌNH ẢNH HIỆN ĐẠI
 
 
           button.btn.btn--light.seemore-btn(type='button') Xem chi tiết
@@ -70,9 +70,9 @@
             .extra
               img.extra-img(src="img/carousel-img/carousel-2-extra-3.png", alt="")
 
-          p.carousel-header.display-till-md SỰ HOÀN HẢO
-          p.carousel-header.hidden-till-md Sự hoàn hảo chưa bao giờ ở gần đến vậy
-          p.carousel-header.display-till-md CHƯA BAO GIỜ GẦN ĐẾN VẬY
+          p.main-carousel__text.display-till-md SỰ HOÀN HẢO
+          p.main-carousel__text.hidden-till-md Sự hoàn hảo chưa bao giờ ở gần đến vậy
+          p.main-carousel__text.display-till-md CHƯA BAO GIỜ GẦN ĐẾN VẬY
 
 
           button.btn.btn--light.seemore-btn(type='button') Xem chi tiết
@@ -98,8 +98,8 @@
             .carousel-caption__img
             .carousel-caption__img
 
-          p.carousel-header.font-italic.font-weight-normal "Một ngàm cho tất cả"
-          p.carousel-header Kết nối mọi thứ với ngàm E-mount của 
+          p.main-carousel__text.font-italic.font-weight-normal "Một ngàm cho tất cả"
+          p.main-carousel__text Kết nối mọi thứ với ngàm E-mount của 
             span.logo-sony-inline SONY
 
 
