--- a/halo/template/parts/card.pug
+++ b/halo/template/parts/card.pug
@@ -11,4 +11,4 @@
       span.sale-badge
         img(src='img/img--misc/badge--sale.png' alt='')
       span.sale-amount.font-italic.font-12 (Giảm 8.000.000đ)
-    a.btn.btn--dark.seemore-btn(href='#') Xem chi tiết 
+    a.btn.btn--dark.seemore-btn(href='details.html') Xem chi tiết 
